# tedpinkerton.ca

./: .gitignore  .gitmodules  Cargo.toml  Dioxus.toml  README.md  build.rs  config.toml  config.yaml  package-lock.json  package.json  readme.md
.github/workflows/: pages.yml
assets/: main.css  main.css.map  tailwind.css
assets/css/: base.css  components.css  footer.css  layout.css  main.css  nav.css  tailwind.css  tokens.css
assets/css/extended/: highlight-links.css  profile-mode.css  smaller-logo.css
assets/scss/: base.scss  blog.scss  breakpoints.scss  buttons.scss  components.scss  footer.scss  layout.scss  logo.scss  main.scss  mixins.scss  nav.scss  pdf.scss  social.scss  theme-toggle.scss  tokens.scss  utilities.scss  webring.scss
assets/styling/: footer.css  main.css
content/: _index.md
content/about/: _index.md
content/blog/: calendar-system.md  calendar_system.md
content/blog/calendar-system/: body.typ  meta.toml
content/pages/: _index.md  page.md
content/portfolio/: _index.md
content/posts/: _index.md  post.md  test-post.md
content/projects/: Placeholder Post.md  _index.md  ndravaw.md  rsx.md  website.md
content/skills/: Placeholder Post.md  _index.md  python.md
docs/: CNAME  index.html
docs/assets/: Theodore_Pinkerton_CV-b63990d987e2112f.pdf.br  main-b73cf36eff8c790c.css  main-b73cf36eff8c790c.css.br  tailwind-84a149930fc5a8bc.css  tailwind-84a149930fc5a8bc.css.br  tedpinkerton-ca-6c1b45fa8c25c62c.js  tedpinkerton-ca-6c1b45fa8c25c62c.js.br  tedpinkerton-ca_bg-701badf21a79b7da.wasm  tedpinkerton-ca_bg-701badf21a79b7da.wasm.br
layouts/: index.html
layouts/partials/: head.html  header.html  logo.html  subtitle.html
layouts/partials/head/: extend_head.html
public/: 404.html  index.html  index.xml  sitemap.xml
public/categories/: index.html  index.xml
public/pages/: index.html  index.xml
public/pages/page/: index.html
public/posts/: index.html  index.xml
public/posts/post/: index.html
public/tags/: index.html  index.xml
src/: blog.rs  main.rs  theme.rs
src/components/: blog_post.rs  blog_post_preview.rs  footer.rs  header.rs  logo.rs  markdown.rs  mod.rs  navbar.rs  page.rs  webring.rs  wgpu_canvas.rs
src/layouts/: header_footer.rs  mod.rs
src/views/: about.rs  art.rs  badge.rs  blog.rs  blog_post.rs  contact.rs  header_footer.rs  home.rs  mod.rs  nav_footer.rs  navbar.rs  projects.rs  resume.rs
