[package]
name = "tedpinkerton-ca"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
dioxus = { version = "0.6", features = ["router"] }
dioxus-markdown = "0.0.1"
dioxus-sdk = { version = "0.6", features = ["storage", "system_theme"] }
include_dir = { version = "0.7", features = ["glob"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[features]
default = ["web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
web = ["dioxus/web"]

[profile]
[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
